Fix call to action button styling and positioning on narrow screens

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   }
   
 .main-content {
-    flex-grow: 1;
+    flex: 1 0 auto;
 }
 
 body {
@@ -113,16 +113,6 @@ body {
     border-radius: 1rem;
 }
 
-@media screen and (max-width: 768px) {
-    * {
-        flex-wrap: wrap;
-    }
-    callToAction {
-        display: flex;
-        justify-content: center;
-    }
-}
-
 .gap-1 {
     gap: 1rem;
 }
@@ -151,7 +141,6 @@ body {
 .hero h1 {
     font-size: 48px;
     font-weight: bold;
-    color: #f9faf8;
     margin: 0;
 }
 
@@ -191,6 +180,7 @@ body {
     color: white;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
     .callToAction h2 {
@@ -198,26 +188,42 @@ body {
     }
 
     .callToAction-1 {
-        width: 75%;
+        flex-basis: 50%;
     }
 
     .callToAction-2 {
         display:flex;
-        width: 25%;
+        flex-basis: 50%;
         justify-content: flex-end;
     }
 
     .actionBtn {
-        border-color: #f0faf8;
+
         color: white;
-        border-width: 5px;
+        border-style:none;
         background-color: rgba(0,0,0,0);
         font-weight: bold;
         font-size: medium;
         padding: 0.5rem 2rem 0.5rem 2rem;
+        outline: 0;
+    }
+
+    .actionBtnOutline {
         border-radius: 0.5rem;
+        border-width: 0.25em;
+        border-style: solid;
+        border-color: white;
+        text-align: center;
     }
 
 .footer {
     align-items: center;
+}
+
+/* Special handling on narrow screens */
+
+@media screen and (max-width: 768px) {
+    * {
+        flex-wrap: wrap;
+    }
 }
